# learn_project

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini
database/: __init__.py
repositories/: base.py  hotels.py  rooms.py
routers/: hotels.py  load.py
schemas/: hotels.py
src/: config.py  database.py  dependencies.py  exceptions.py  main.py  openapi.py
src/api/: auth.py  booking.py  bookings.py  default.py  dependencies.py  facilities.py  hotels.py  images.py  load.py  rooms.py  utils.py
src/api/routers/: auth.py  hotels.py
src/cache/: cache_decorator.py
src/database/: __init__.py
src/migrations/: env.py
src/migrations/versions/: 088989921135_add_rooms.py  2024_11_29_1134-71ff789667f2_initial.py  2024_11_30_1735-93122f276d87_migrations.py  2024_11_30_1738-92f5206d6a8a_migrations.py  2024_11_30_1758-68a7b0520aad_migrations.py  2024_12_02_1029-558e0c1d02f7_migrations.py  2024_12_04_2044-61cc23b0bb2d_add_facilities.py  2024_12_06_1924-22535089adf9_migrations.py  a556d299deed_add_rooms.py  e7ee7d88e8cc_initial.py
src/models/: __init__.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  booking.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: booking.py  facilities.py  hotels.py  rooms.py
src/services/: auth.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
src/tasks/: asyncio_tasks.py  celery_app.py  tasks.py
src/utils/: db_manager.py  utils.py
tests/: conftest.py
tests/integratoin_tests/auth/: test_api.py  test_auth.py
tests/integratoin_tests/bookings/: test_api.py  test_db.py
tests/integratoin_tests/facilities/: test_api.py
tests/integratoin_tests/hotels/: test_db.py
