[tool.poetry]
name = "learn-project"
version = "0.1.0"
description = ""
authors = ["Dmitry"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.1"
aiohttp = "^3.11.7"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
black = "^24.10.0"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^5.2.1"
fastapi-cache2 = "^0.2.2"
celery = "^5.4.0"
pillow = "^11.0.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pyright = "^1.1.390"

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "src/migrations/*",
    "static",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.format]
preview = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
